# studyPlateform

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  main.py  notes_service.py  scheduler_service.py  stats_service.py
backend/app/api/: attempts.py  notes.py  questions.py  review.py  stats.py  subjects.py  tutorials.py
backend/app/content/: loader.py  schema.py
backend/app/db/: attempts.py  database.py  schedule.py
backend/tests/: conftest.py  test_attempts_api.py  test_attempts_repo.py  test_content_bank.py  test_loader.py  test_notes_api.py  test_notes_service.py  test_questions_api.py  test_review_api.py  test_schedule_repo.py  test_scheduler_service.py  test_schema.py  test_stats_api.py  test_study_materials_doc.py  test_tutorials_api.py
content/algorithms/: backtracking-search.en.md  backtracking-search.md  backtracking-search.yaml  complexity-dp-graphs.en.md  complexity-dp-graphs.md  complexity-dp-graphs.yaml  divide-and-conquer.en.md  divide-and-conquer.md  divide-and-conquer.yaml  graph-algorithms.en.md  graph-algorithms.md  graph-algorithms.yaml  greedy.en.md  greedy.md  greedy.yaml  sorting.en.md  sorting.md  sorting.yaml
content/artificial-intelligence/: search-planning.en.md  search-planning.md  search-planning.yaml
content/databases/: indexing.md  (+14 more)
docs/: ARCHITECTURE.md  HANDOFF.md  study-materials.md  企畫書.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
(+161 files in other folders)
